Fix a firefox menu item alignment bug. Adjust UI color

--- a/src/css/_menu-bar.css
+++ b/src/css/_menu-bar.css
@@ -29,6 +29,7 @@
     height: 100%;
     color: white;
     font-size: 0;
+    vertical-align: top; /* Fix Firefox pushing this down by 1px */
 }
 
 .tp-menu-right {
