--- a/src/css/main.css
+++ b/src/css/main.css
@@ -9,7 +9,7 @@
 :root {
     --font-family: 'Montserrat';
     --ui-base-color: #26282c;
-    --ui-component-color: #303236;
+    --ui-component-color: #2c2e32;
     --ui-element-color: #3a3c40;
     --ui-active-color: #36383c;
     --ui-highlight-color: yellow;
